@@ -83,7 +83,7 @@ public class TabulatedLofOffset implements BoundedAttitudeProvider {
     public TabulatedLofOffset(final Frame inertialFrame, final LOF lof,
                               final List<? extends TimeStampedAngularCoordinates> table,
                               final int n, final AngularDerivativesFilter filter) {
-        this(inertialFrame, lof, table, n, filter, table.get(0).getDate(), table.get(table.size() - 1).getDate());
+        this(inertialFrame, lof, table, n, filter, table.getFirst().getDate(), table.getLast().getDate());
     }
 
     /** Creates new instance.
