@@ -359,7 +359,7 @@ public class TimeSpanEstimatedModelTest {
                 driver.setSelected(false);
             }
         }
-        ParameterDriver selected = bound.getDrivers().get(0);
+        ParameterDriver selected = bound.getDrivers().getFirst();
         double p0 = selected.getReferenceValue();
         double h  = selected.getScale();
 
