@@ -100,9 +100,9 @@ class EclipseDetectorTest {
         Assertions.assertEquals(duration, finalState.getDate().durationFrom(iniDate), 1.0e-3);
         final List<LoggedEvent> events = logger.getLoggedEvents();
         Assertions.assertEquals(10, events.size());
-        Assertions.assertSame(events.get(0).getEventDetector(), withoutFlattening);
-        Assertions.assertFalse(events.get(0).isIncreasing());
-        Assertions.assertEquals( 2274.702, events.get(0).getState().getDate().durationFrom(iniDate), 1.0e-3);
+        Assertions.assertSame(events.getFirst().getEventDetector(), withoutFlattening);
+        Assertions.assertFalse(events.getFirst().isIncreasing());
+        Assertions.assertEquals( 2274.702, events.getFirst().getState().getDate().durationFrom(iniDate), 1.0e-3);
         Assertions.assertSame(events.get(1).getEventDetector(), withFlattening);
         Assertions.assertFalse(events.get(1).isIncreasing());
         Assertions.assertEquals( 2280.427, events.get(1).getState().getDate().durationFrom(iniDate), 1.0e-3);
