@@ -142,7 +142,7 @@ public class DSSTIntegrableJacobianColumnGeneratorTest {
                     }
                 }
             }
-            ParameterDriver selected = bound.getDrivers().get(0);
+            ParameterDriver selected = bound.getDrivers().getFirst();
             double p0 = selected.getReferenceValue();
             double h  = selected.getScale();
             selected.setValue(p0 - 4 * h);
